--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 $primary-color: #00a7e1;
-$dark-color: #001f04;
+$dark-color: #00171f;
 $secondary-color: #003459;
 $medium-color: #007ea7;
 $light-color: #fff;
