--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,19 +1,4 @@
-$primary-color: #00a7e1;
-$dark-color: #00171f;
-$secondary-color: #003459;
-$medium-color: #007ea7;
-$light-color: #fff;
-$accent-color: #ff7300;
-$accent-font: "Satisfy", cursive;
-$main-font: "Roboto", sans-serif;
-
-@mixin flexbox($justify: center, $direction: row) {
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: $justify;
-  flex-direction: $direction;
-}
+@import "config";
 
 .container {
   width: 90%;
@@ -176,68 +161,4 @@ footer {
   margin-top: 5rem;
 }
 
-// Media Queries
-@media (max-width: 850px) {
-  header {
-    .container {
-      width: 90%;
-
-      .hamburger {
-        display: block;
-        font-size: 1.5rem;
-        cursor: pointer;
-        z-index: 1;
-
-        .fa-times {
-          display: none;
-        }
-      }
-
-      .logo {
-        font-size: 2rem;
-      }
-
-      .nav {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 60%;
-        height: 100vh;
-        transform: translateX(150%);
-        transition: transform 0.5s ease-in-out;
-
-        ul {
-          background: rgba($secondary-color, 0.95);
-          width: 100%;
-          height: 100%;
-          @include flexbox($direction: column);
-
-          li {
-            margin: 1rem 0;
-
-            a {
-              display: inline-block;
-              padding: 0.5rem 0;
-            }
-          }
-        }
-      }
-    }
-    &.open {
-      .hamburger {
-        .fa-times {
-          display: block;
-          font-size: 1.8rem;
-        }
-
-        .fa-bars {
-          display: none;
-        }
-      }
-
-      .nav {
-        transform: translateX(0);
-      }
-    }
-  }
-}
+@import "mobile";
