--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -25,13 +25,15 @@
         right: 0;
         width: 60%;
         height: 100vh;
+        max-height: 100vh;
         transform: translateX(150%);
         transition: transform 0.5s ease-in-out;
 
         ul {
           background: rgba($secondary-color, 0.95);
           width: 100%;
-          height: 100%;
+          height: 100vh;
+          max-height: 100vh;
           @include flexbox($direction: column);
 
           li {
