--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -25,6 +25,7 @@
         right: 0;
         width: 60%;
         height: 100%;
+        overflow: hidden;
         transform: translateX(150%);
         transition: transform 0.5s ease-in-out;
 
