--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -33,7 +33,7 @@
           background: rgba($secondary-color, 0.95);
           width: 100%;
           height: 100vh;
-          @include flexbox($direction: column);
+          @include flexbox();
 
           & > div {
             text-align: center;
@@ -43,6 +43,8 @@
             transition: opacity 0.5s ease-in-out;
 
             ul {
+              @include flexbox($direction: column);
+
               li {
                 margin: 1rem 0;
 
