--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -32,15 +32,16 @@
         & > div {
           background: rgba($secondary-color, 0.95);
           width: 100%;
-          height: 100vh;
+          height: 100%;
           @include flexbox();
 
           & > div {
             text-align: center;
             max-width: 100vw;
-            max-height: 100vh;
+            max-height: 100%;
             opacity: 0;
             transition: opacity 0.5s ease-in-out;
+            transition-delay: 0.3s;
 
             ul {
               @include flexbox($direction: column);
